Increase main title font size by 20%

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             color: var(--text-primary);
         }
 
+        h1 {
+            font-size: 2.4rem;  
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+
         .container {
             max-width: 1400px;
             padding: 2rem;
