--- a/applicant.html
+++ b/applicant.html
@@ -552,7 +552,7 @@
             input.disabled = true;
             
             try {
-                const response = await fetch('http://localhost:8000/api/chat', {
+                const response = await fetch('/api/chat', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
