--- a/login.html
+++ b/login.html
@@ -163,7 +163,7 @@
             const errorMessage = document.getElementById('errorMessage');
             
             try {
-                const response = await fetch('http://localhost:8000/api/login', {
+                const response = await fetch('/api/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
